--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  color: #fff;
 }
 
 .main {
@@ -20,7 +21,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #5f5f5f;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,7 +34,7 @@
   flex-grow: 1;
 }
 
-.title a {
+.title span {
   color: #0070f3;
   text-decoration: none;
 }
@@ -60,21 +61,12 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 85%;
   margin-top: 3rem;
 }
 
@@ -84,10 +76,10 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #9e9e9e;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 30%;
 }
 
 .card:hover,
