Implemented mobile view

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,20 @@
 @media (max-width: 600px) {
   .grid {
     width: 100%;
-    flex-direction: column;
+  }
+  .container {
+    display: block;
+  }
+  .card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    display: block;
+  }
+  .card {
+    width: 100%;
   }
 }
